# my-position

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/my_position/: __init__.py  cli.py  main.py
src/myposition/: __init__.py  cli.py  main.py
src/myposition/extract/: __init__.py  scanner.py  validators.py
tests/: __init__.py  test_cli.py  test_e2e.py  test_main.py
tests/extract/: test_scanner.py  test_validators.py
