[project]
name = "myposition"
version = "0.1.0"
description = "Synthesize your positions on topics from conversations, notes, and documents"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Ariel Arévalo Alvarado", email = "71473451+arielarevalo@users.noreply.github.com"}
]
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[project.scripts]
myposition = "myposition.main:main"

[dependency-groups]
dev = [
    "ruff>=0.8.7",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.25.2",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "PT", "ANN", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # Allow assert in tests

[tool.ruff.lint.isort]
known-first-party = ["myposition"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
